# easy-eye-tracker

./: Readme.md
src/: CMakeLists.txt  constants.h  eyeTracker.cpp  eyeTracker.h  findEyeCenter.cpp  findEyeCorner.cpp  findEyeCorner.h  globalVariables.cpp  globalVariables.h  helpers.cpp  helpers.h  main.cpp
